# fcm_autoresearch

./: .gitignore  pyproject.toml  requirements.txt  setup_remote.sh  setup_vastai.sh  sync.sh  sync_vastai.sh
archive/old_scripts/: hyperparameter_search.py  quick_test_model.py
archive/old_scripts/analysis/: best_model_report.txt
configs/examples/: fnn_loss_comparison.json  fnn_single.json  sweep_grid.json  sweep_optuna.json  sweep_random.json  transformer.json
fcm_autoresearch/: NEXT_SESSION.md  autoresearch_loop.py  config_gpu0.json  config_gpu1.json  config_gpu2.json  config_gpu3.json  current_config.json  program.md  results.tsv  run_trial.sh  run_trial_gpu.sh
fcm_autoresearch/data/: train.csv  valid.csv
fcm_autoresearch/data_gpu0/: train.csv  valid.csv
fcm_autoresearch/data_gpu1/: train.csv  valid.csv
fcm_autoresearch/data_gpu2/: train.csv  valid.csv
fcm_autoresearch/data_gpu3/: train.csv  valid.csv
fcm_autoresearch/gpu_results/: gpu0.txt  gpu1.txt  gpu2.txt  gpu3.txt
fcm_quadrature/analysis/: analyze_results.py  monitor.py
fcm_quadrature/data_generation/: mesh.py  parameters.py
fcm_quadrature/gui/: app.py
fcm_quadrature/models/: fnn.py  transformer.py
fcm_quadrature/training/: data_loading.py  losses.py  schedules.py  sweeps.py  train_parallel.py  train_single.py  train_transformer.py
fcm_quadrature/utils/: config.py  tracking.py
scripts/: generate_1million.py  generate_data.py  run_gui.py  split_dataset.py  test_setup.py  train.py
tests/: test_all_edges.py  test_integration.py  test_moment_fitting.py
(+266 files in other folders)
